Format all section commands correctly
Previously only `\section` was modified to have the right formatting,
but now `\subsection` and `\subsubsection` are as well

--- a/mla.dtx
+++ b/mla.dtx
@@ -395,7 +395,11 @@
 %
 %    \begin{macrocode}
 \titleformat*{\section}{\normalsize}
+\titleformat*{\subsection}{\normalsize}
+\titleformat*{\subsubsection}{\normalsize}
 \titlespacing*{\section}{0pt}{0pt}{0pt}
+\titlespacing*{\subsection}{0pt}{0pt}{0pt}
+\titlespacing*{\subsubsection}{0pt}{0pt}{0pt}
 \titlelabel{\thetitle. }
 %    \end{macrocode}
 %
