Remove temporary fix in `noindent` environment
Instead of using `\tmpind`, I'd used a hard-coded `0.5in`
for resetting the indentation.  I then realised `\edef` existed.
So now it's fixable/fixed.

--- a/mla.dtx
+++ b/mla.dtx
@@ -245,7 +245,7 @@
 % the \Dpkg{ragged2e} package, so we'll re-define it.
 %    \begin{macrocode}
 \renewenvironment{noindent}{%
-    \def\tmpind{0.5in}
+    \edef\tmpind{\parindent}
     \setlength{\parindent}{0pt}
 }{%
     \setlength{\parindent}{\tmpind}
