Add endnotes environment
Uses `eznotes` package and is absolute hell to do

--- a/example.tex
+++ b/example.tex
@@ -22,7 +22,6 @@ writing our body.
 
 Our professor prefers we section our paper since it's
 \emph{really} long:
-
 \begin{blockquote}
 I really hope you do this right, John.
 I got tired of reading that twenty-page paper with no logical breaks!
@@ -30,18 +29,27 @@ Just divide it into sections already, even though the MLA style guide
 doesn't tell you to.
 It's technically not \emph{prohibited}, I guess.  \cite{que2019}
 \end{blockquote}
-
 That's when the ``\textbackslash{}section'' commands come in handy.
-You can even create a subsection!
-It's just like in the normal ``article'' class.
+You can even create a subsection!\endnote{It's just like in the
+normal ``article'' class.}
 
 \subsection{Subsection}
 
 Notice we cited something above in the blockquote.
 That's where ``workscited'' comes in handy with perfect MLA format!
 (The ``example.bib'' file follows this whole example.)
+But, before that\ldots didn't we specify an endnote somewhere?
 
 \end{paper}
+
+\begin{notes}
+
+% It's also important you use the MLA template
+% provided with the class, lest it look wrong.
+
+\printendnotes[mla]
+
+\end{notes}
 
 \begin{workscited}
 
