Counter weird unexplained space under headers

--- a/mla.dtx
+++ b/mla.dtx
@@ -458,6 +458,7 @@
     \begin{noindent}
         \begin{center}Notes\end{center}
     \end{noindent}
+    \vspace{-16pt} % XXX to counter unexplained space
 }{%
     \newpage
 }
@@ -488,6 +489,7 @@
     \begin{noindent}
         \begin{center}Works Cited\end{center}
     \end{noindent}
+    \vspace{-16pt} % XXX to counter unexplained space
 }{%
     \newpage
 }
