Hide hyperlink boxes in PDF output

--- a/mla.dtx
+++ b/mla.dtx
@@ -210,7 +210,7 @@
 \RequirePackage[american]{babel}
 \RequirePackage{csquotes}
 \RequirePackage{hanging}
-\RequirePackage[pdfusetitle]{hyperref}
+\RequirePackage[hidelinks,pdfusetitle]{hyperref}
 \RequirePackage[\blopts,backend=biber]{biblatex}
 %    \end{macrocode}
 %
