Rename `example` files to `mla-example`
Per advice of Erik Braun from the CTAN team
(I finally got it uploaded!)

--- a/mla-example.tex
+++ b/mla-example.tex
@@ -7,7 +7,7 @@
 \date{\today}
 
 % This will be explained later!
-\addbibresource{example.bib}
+\addbibresource{mla-example.bib}
 
 \begin{document}
 
