--- a/mla.dtx
+++ b/mla.dtx
@@ -555,13 +555,13 @@
 % Following is a basic \LaTeXe\ document using \Dfile{mla.cls}
 % and its corresponding bibliography.
 %
-% \subsection{\texttt{example.tex}}
+% \subsection{\texttt{mla-example.tex}}
 %
-% \verbatiminput{example.tex}
+% \verbatiminput{mla-example.tex}
 %
-% \subsection{\texttt{example.bib}}
+% \subsection{\texttt{mla-example.bib}}
 %
-% \verbatiminput{example.bib}
+% \verbatiminput{mla-example.bib}
 %
 % \Finale
 \endinput
